[package]
name = "cumulus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.17.3" }
bevy_camera = "0.17.3"
bevy_egui = "0.38.0"
bevy_pointcloud = { git = "https://github.com/rlamarche/bevy_pointcloud", features = ["webgl"] }
clap = { version = "4.5.53", features = ["derive"] }
colorous = "1.0.16"
csv = "1.4.0"
futures = "0.3.31"
pcd-rs = { git = "https://github.com/jerry73204/pcd-rs", features = ["derive"] }
ply-rs-bw = "3.0.0"
rfd = "0.17.2"
wasm-bindgen-futures = "0.4.56"
wgpu-types = "28.0.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
